--- a/style.css
+++ b/style.css
@@ -37,4 +37,15 @@ div {
     grid-area: box4;
 }
 
-@media and screen
+@media only screen and (max=width: 500px) {
+    
+    .maingrid {
+
+        display: grid;
+        grid-template-areas: "box1"
+                             "box2"
+                             "box3"
+                             "box4" 
+    }
+
+}
