--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 div {
 
     border: 1px solid black;
-
+    width: 900px;
 }
 
 .box1 {
@@ -33,8 +33,8 @@ div {
     grid-area: box4;
 }
 
-.box1 {
-    grid-area: box4;
+.box5 {
+    grid-area: box5;
 }
 
 @media only screen and (max-width: 500px) {
@@ -45,7 +45,8 @@ div {
         grid-template-areas: "box1"
                              "box2"
                              "box3"
-                             "box4" 
+                             "box4"
+                             "box5" 
     }
 
 }
