--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: grid;
     grid-template-areas: "box1 box2"
                          "box3 box4"
+                         "box5 box5";
 }
 
 div {
