--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 div {
 
     border: 1px solid black;
-    width: 900px;
 }
 
 .box1 {
@@ -47,7 +46,7 @@ div {
                              "box2"
                              "box3"
                              "box4"
-                             "box5" 
+                             "box5"; 
     }
 
 }
